--- a/app/sass/pages/_home.sass
+++ b/app/sass/pages/_home.sass
@@ -91,7 +91,7 @@
       max-width: 100%
 
     &:last-child
-      font-weight: bold
+      font-weight: $depth
       margin-top: 25px
       margin-bottom: 113px
       max-width: 440px
@@ -167,7 +167,7 @@
 
   &__item-title
     font-size: 23px
-    font-weight: bold
+    font-weight: $depth
     margin-top: 7px
 
     @include media(1024)
@@ -228,7 +228,7 @@
     color: #fff
     font-family: 'Open Sans', sans-serif
     font-size: 23px
-    font-weight: bold
+    font-weight: $depth
     text-align: left
     max-width: 500px
 
@@ -294,7 +294,7 @@
     color: #fff
     font-size: 18px
     font-family: 'Open Sans', sans-serif
-    font-weight: bold
+    font-weight: $depth
     padding: 13px 0
     text-transform: uppercase
     cursor: pointer
@@ -473,7 +473,7 @@
 
   &__item-title
     font-size: 20px
-    font-weight: bold
+    font-weight: $depth
     margin-bottom: 10px
 
     @include media(1024)
@@ -664,7 +664,7 @@
       letter-spacing: 0
 
   &__texts-text-second
-    font-weight: bold
+    font-weight: $depth
     letter-spacing: -0.4px
 
     @include media(1024)
@@ -745,7 +745,7 @@
     font-family: 'Open Sans', sans-serif
     color: #fff
     font-size: 18px
-    font-weight: bold
+    font-weight: $depth
     text-transform: capitalize
     background: linear-gradient(90deg, #F86544 0%, #D83B17 100%)
     padding: 12px 0 13px
