--- a/app/css/main.css
+++ b/app/css/main.css
@@ -204,7 +204,7 @@ select, input, textarea {
     max-width: 450px;
     max-width: 100%; }
   .about__text:last-child {
-    font-weight: bold;
+    font-weight: 600;
     margin-top: 25px;
     margin-bottom: 113px;
     max-width: 440px; }
@@ -296,7 +296,7 @@ select, input, textarea {
       margin: 0 auto; } }
   .easy-money__item-title {
     font-size: 23px;
-    font-weight: bold;
+    font-weight: 600;
     margin-top: 7px; }
     @media (max-width: 1024px) {
       .easy-money__item-title {
@@ -366,7 +366,7 @@ select, input, textarea {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-size: 23px;
-    font-weight: bold;
+    font-weight: 600;
     text-align: left;
     max-width: 500px; }
     @media (max-width: 1024px) {
@@ -480,7 +480,7 @@ select, input, textarea {
     color: #fff;
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
+    font-weight: 600;
     padding: 13px 0;
     text-transform: uppercase;
     cursor: pointer; }
@@ -716,7 +716,7 @@ select, input, textarea {
 
 .testimonials__item-title {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 600;
   margin-bottom: 10px; }
   @media (max-width: 1024px) {
     .testimonials__item-title {
@@ -920,7 +920,7 @@ select, input, textarea {
       margin-bottom: 41px;
       letter-spacing: 0; }
   .laptop__texts-text-second {
-    font-weight: bold;
+    font-weight: 600;
     letter-spacing: -0.4px; }
     @media (max-width: 1024px) {
       .laptop__texts-text-second {
@@ -1019,7 +1019,7 @@ select, input, textarea {
     font-family: 'Open Sans', sans-serif;
     color: #fff;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 600;
     text-transform: capitalize;
     background: -webkit-gradient(linear, left top, right top, from(#F86544), to(#D83B17));
     background: -webkit-linear-gradient(left, #F86544 0%, #D83B17 100%);
